--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
     <link rel="stylesheet" href="./Styles/style.css">
+    <script src="https://kit.fontawesome.com/525a28f09d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header >
+        <nav class="navbar display-flex">
+            <h1>Influencer products</h1>
+            <ul class="display-flex">
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log In</a></li>
+                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
