--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
                 <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </nav>
+        <div class="banner display-flex">
+            <div class="left-section">
+                <h1 class="banner-title">Start your Journey as Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="right-section">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </div>
     </header>
 </body>
 </html>
