--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@
                 <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="right-section">
-                <img src="./images/main-camera.png" alt="">
+                <img src="./images/main-camera.png" alt="Photo of Camera">
             </div>
         </div>
     </header>
+    <main>
+        <section class="website-section">
+            <img src="./logos/Alibaba.svg" alt="Alibaba">
+            <img src="./logos/Amazon.svg" alt="Amazon">
+            <img src="./logos/Daraz.pk Logo.svg" alt="Daraz">
+            <img src="./logos/Ebay.svg" alt="Ebay">
+            <img src="./logos/Rakuten.svg" alt="Rakuten">
+            <img src="./logos/Walmart.svg" alt="Walmart">
+            <img src="./logos/Target.svg" alt="Target">
+        </section>
+    </main>
 </body>
 </html>
